= ActiveMerchant CHANGELOG

* Add Conekta gateway [leofischer]

== Version 1.40.0 (October 18th, 2013)

* Paymill: Revert Add support for specifying the :customer [melari]
* Quickpay: Make v7 of the API default [kvs]
* Bitpay: Add return [tahnok]

== Version 1.39.2 (October 10th, 2013)

* Eway Rapid: Fix a bug with access codes that have equal signs in them [odorcic]

== Version 1.39.1 (October 9th, 2013)

* Bitpay: Invoice Fix [orenmazor]

== Version 1.39.0 (October 9th, 2013)

* Moneris: Add optional (off by default) verification_value support [duff]
* Citrus: New Integration [viatechs, melari]
* Payu Paisa: New Integration [melari]
* Spreedly: Pass country with other address fields [hoenth]
* SecureNet: Fix order of xml params [duff]
* Paymill: Add support for void [duff]
* Add MoneyMovers gateway [jeffutter]
* Ogone: Add a :store_amount option [rymai]
* Ogone: Require TLSv1 [ntalbott]
* Moneris: Add support for purchasecorrection [pgib]
* Spreedly: Add ability to retain on success [duff]
* Spreedly: Pass verification value [duff]
* Paymill: Add support for specifying the :customer [Sbastien]
* Realex: Correct AVS input format [ExxKA]
* USAEpay Transaction: Use sandbox when in test mode [radar]
* Braintree Blue: Do not use global config [rdj]
* eWay Rapid: Add response messages [BenZhang]
* Paysbuy: Add 'Pending' notification status [divineforest]
* Cybersource: Use standard :phone field [cade]
* Orbital: Fix/tweak AVS codes [boone]
* Quickpay: Add v7 support [larspind]
* Authorize.Net CIM: Add option to not mark transactions as test [alanandrade]

== Version 1.38.1 (September 16, 2013)

* Moneris: Remove verification_value support [melari]

== Version 1.38.0 (September 6, 2013)

* FirstData E4: Include missing address information for AVS and CVV [melari]
* Litle: Deprecate credit method in favor of refund [melari]
* Moneris: Add verification_value support [duff]
* Webpay: Fixes issues with partial JPY currency [keikubo, melari]